Price-service refactor with lombok and add const templates