@@ -20,6 +20,8 @@ import java.util.stream.Collectors;
 public class PriceService {
 
     private static final Logger log = LogManager.getLogger(PriceService.class);
+    private static final String PRODUCT_NOT_FOUND_TEMPLATE = "Product not found: %s";
+    private static final String FAILED_FETCH_TEMPLATE = "Failed to fetch product for productId: %s";
     @Autowired
     private CatalogClient catalogClient;
     @Autowired
@@ -30,14 +32,9 @@ public class PriceService {
     @Async("customExecutor")
     public CompletableFuture<OrderItemDTO> calculateItem(OrderItemDTO orderItem, String region) {
         try {
-            log.info("Calculating item for productId: " + orderItem.getProductId());
-
             BigDecimal basePrice = catalogClient.getProduct(orderItem.getProductId())
                     .getBody().getBasePrice()
                     .multiply(BigDecimal.valueOf(orderItem.getQuantity()));
-
-            log.info("Base price for productId {}: {}", orderItem.getProductId(), basePrice);
-
             BigDecimal discount = discountService.calculateDiscount(orderItem.getProductId(), basePrice);
             BigDecimal finalPrice = basePrice.subtract(discount);
             BigDecimal tax = taxService.calculateTax(finalPrice, region);
@@ -46,22 +43,17 @@ public class PriceService {
             orderItem.setFinalPrice(finalPrice);
             orderItem.setTotalDiscount(discount);
             orderItem.setTotalTax(tax);
-
-            log.info("Final price for productId {}: {}", orderItem.getProductId(), finalPrice);
-
             return CompletableFuture.completedFuture(orderItem);
         } catch (FeignException.NotFound e) {
-            log.error("Product not found: " + orderItem.getProductId(), e);
-            throw new RuntimeException("Product not found: " + orderItem.getProductId(), e);
+            log.error(PRODUCT_NOT_FOUND_TEMPLATE.formatted(orderItem.getProductId()), e);
+            throw new RuntimeException(PRODUCT_NOT_FOUND_TEMPLATE.formatted(orderItem.getProductId()), e);
         } catch (Exception e) {
-            log.error("Failed to fetch product for productId: " + orderItem.getProductId(), e);
-            throw new RuntimeException("Failed to fetch product: " + e.getMessage(), e);
+            log.error(FAILED_FETCH_TEMPLATE.formatted(orderItem.getProductId()), e);
+            throw new RuntimeException(FAILED_FETCH_TEMPLATE.formatted(orderItem.getProductId()), e);
         }
     }
 
     public OrderDTO calculateOrder(OrderDTO request) {
-        log.info("Starting order calculation for orderId: {}", request.getId());
-
         AtomicReference<BigDecimal> totalFinalPrice = new AtomicReference<>(BigDecimal.ZERO);
         AtomicReference<BigDecimal> totalTax = new AtomicReference<>(BigDecimal.ZERO);
         AtomicReference<BigDecimal> totalDiscount = new AtomicReference<>(BigDecimal.ZERO);
@@ -74,7 +66,7 @@ public class PriceService {
                             totalDiscount.updateAndGet(v -> v.add(orderItem.getTotalDiscount()));
                             return orderItem;
                         }))
-                .collect(Collectors.toList());
+                .toList();
 
         // Wait for all async tasks to complete
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
@@ -90,8 +82,6 @@ public class PriceService {
                 .collect(Collectors.toList());
 
         request.setItems(items);
-        log.info("Order calculation completed for orderId: {}", request.getId());
-
         return request;
     }
 
